# langchain_capstone_project

./: .gitignore  alerts.yml  prometheus.yml  pyproject.toml
app/: llm.py  main.py
app/api/: evaluate.py  input_document.py  metrics.py  user_input.py
app/guard_rails/: grounding_validator.py  input_guardrails.py  pii_masking.py  pii_pattenns.py  prompt_injection.py
app/helper/: config_opentelemetry.py  create_pdf.py  evaluate_ans_quality.py
app/ingestion/: emb.py  embedding.py  loader.py  pipeline.py  spliter.py
app/monitoring/: evaluate_ans_quality.py  evaluate_retreval.py  looger.py  mertics.py  test_data.py  timing_callback.py  token_callback.py
app/rag/: chain.py  conversational_buffer.py  retreiver.py
app/static/: app.js  index.html  styles.css
